[package]
name = "echo_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinymux = {path = "../tinymux" }
hdrhistogram = "7.5.0"
rand = "0.8.5"
clap = { version = "3.1.6", features = ["derive"] }

